Rework of DAS1 handling.  Sources on servers are now stored by MAPMASTER and sources that share a MAPMASTER are merged.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@5235 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd